--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
 .bg-header {
   background-color: #F16334;
 }
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
